create github pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="CI-ABINCI">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/imageedit-1-8599916822-128x109.png" type="image/x-icon">
-  <meta name="description" content="Ci Abinci.com delivers your food to your door steps within the shortest period of time. With various options including pay on delivery. 
+  <meta name="description" content="we deliver your food to your door steps within the shortest period of time. With various options including pay on delivery and monthly or weekly subscription. 
 We currently provide our services in Sokoto but will soon expand to other parts of the country.">
   
   
@@ -97,7 +97,7 @@ We currently provide our services in Sokoto but will soon expand to other parts 
 
 <section class="gallery2 cid-sOEpX8tOzo" id="gallery2-0" data-sortbtn="btn-primary">
     
-    <div class="carousel slide carousel-fade" id="sOJTyyRueG" data-ride="carousel" data-interval="3000">
+    <div class="carousel slide carousel-fade" id="sOJVoCfemg" data-ride="carousel" data-interval="3000">
  
 
         <div class="carousel-inner">
@@ -145,11 +145,11 @@ We currently provide our services in Sokoto but will soon expand to other parts 
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sOJTyyRueG">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sOJVoCfemg">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sOJTyyRueG">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sOJVoCfemg">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -326,7 +326,7 @@ We currently provide our services in Sokoto but will soon expand to other parts 
                                 <h2 class="title2 mbr-fonts-style mbr-semibold display-5">WRITE TO US</h2>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AaPEHwURxXK/sAdOvEu0m3Qct7wDA4mz1fuRlYJ8Va9kvfnkYYkKGnRUMFm50A6j55FuTCJdTlX+gyx1T5qUrSQT57DDd0IErsVWmxHx0unjNbP1EB7z6/fwvHKk9aRP.4VGUlHDSUByMeGzak9o9lhZjiTL/EK37i1Noxa6XZOk0NLwnI9x+QYcWTs4ZhVl4+NXzk8DVP/P77zn25o2o+puzmoe+tYLEUocnS6sY2mYhreo4d8ckZeLMCTb9tDvg">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OEzEQ8ybTc3yRA6XWJtGcGXL0WZhVoz/0pCpcdYShLD8sHu+7wiJEp8kh7/IAqk2qWJVoyxH+R8Bgx+zAMMTD/GR+p1IPPclL7rOKQcrtwOELXQeXSuqvtRgNDVflDsV.DuilpYUJg3066uNqY03paoScdhaF6Avp9oOqTgEcWLpvUz2Y7EZvPhWFlRKopzWZTPpdl/sGo6tQjExse4RBDwCSXod1EdooAJAr/NqVlDsRyOZEl1yug/cG2G/W0gPc">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
