--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ We currently provide our services in Sokoto but will soon expand to other parts 
                 <div class="item-wrapper firstCard">
                   
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Fired Rice</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Fried Rice</strong></h5>
                           <div class="item-img">
                         <img src="assets/images/432141-1631204386-400x400.jpg" alt="" title="" data-slide-to="0" data-bs-slide-to="0">
                     </div>
